Fix the default spacing to create a 60px high bar

--- a/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
+++ b/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
@@ -4,8 +4,8 @@
 
 	padding-right: var(--wp--preset--spacing--edge-space);
 	padding-left: var(--wp--preset--spacing--edge-space);
-	padding-top: 16px;
-	padding-bottom: 16px;
+	padding-top: 17px;
+	padding-bottom: 18px;
 
 	top: var(--wp-admin--admin-bar--height, 0);
 }
